--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -86,6 +86,11 @@
   }
   .modelimg{
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   .location {
@@ -97,3 +102,6 @@
 .model p{ 
   margin: 15px auto;
 }
+
+.modelimgCnt{ height: 250px; overflow: hidden; position: relative;}
+.modelName{ font-size: 20px; margin-bottom: 5px; margin-top: 0;}
